[package]
name = "cert-bar"
version = "0.1.0"
edition = "2024"

[dependencies]
cert-helper = "0.4.0"
chrono = "0.4.41"
clap = { version = "4.5.41", features = ["derive"] }
cms = { version = "0.2.3", features = ["builder"] }
config = { version = "0.15.11", features = ["yaml"] }
mockall = "0.13.1"
num-bigint = "0.4.6"
num-traits = "0.2.19"
rsa = { version = "0.9.8", features = ["sha2"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tempfile = "3.20.0"
der = "0.7.10"
sha2 = { version = "0.10.9", features = ["oid"] }              #
spki = "0.7.3"
x509-cert = "0.2.5"
p256 = { version = "0.13", features = ["ecdsa", "pem"] }
p384 = { version = "0.13", features = ["ecdsa", "pem"] }
ecdsa = { version = "0.16", features = ["signing", "digest"] }
hex = "0.4.3"
